<resources>
    <string name="app_name">4G场强仪</string>



    <string name="confirm_exit">确定要退出吗?</string>
    <string name="point_out">提示</string>
    <string name="ensure">确定</string>
    <string name="remove">取消</string>
    <string name="Cancel">取消</string>
    <string name="Save">保存</string>


    <string name="welcome_toast">欢迎使用4G场强仪......</string>
    <string name="strength_monitor">场强检测</string>
    <string name="direction_monitor">方向监控</string>
    <string name="tab_main">主页</string>
    <string name="tab_config">配置信息</string>
    <string name="tab_system">系统信息</string>
    <string name="title">4G场强仪</string>

    <string name="app_name_actMain">蓝牙串口通信助手</string>

    <string name="app_name_actDiscovery">搜索蓝牙设备</string>

    <string name="app_name_actAbout">关于我们</string>

    <string name="app_name_actKeyBoard">键盘控制器</string>

    <string name="btn_main_Send">发送</string>

    <string name="btn_yes">确定</string>

    <string name="btn_connect">连接</string>

    <string name="btn_reSearch">重新搜索</string>

    <string name="btn_click_me">按键</string>

    <string name="btn_Keyboard_mode">键盘模式</string>

    <string name="btn_Normal_mode">普通模式</string>

    <string name="menu_main_Connection">连接设备</string>

    <string name="menu_Clear">清屏</string>

    <string name="menu_main_About">关于</string>

    <string name="menu_main_IO_Mode">输入输出模式</string>

    <string name="menu_keyboard_set">设置键盘</string>

    <string name="menu_keyboard_set_over">键盘设置结束</string>

    <string name="et_actDiscovery_SendText_Hint">输入需要发送的字符串</string>

    <string name="rb_IO_Mode_Set_Char">字符串</string>

    <string name="rb_IO_Mode_Set_Hex">Hex(00-FF)</string>

    <string name="tv_IO_Mode_Set_Input">输入显示类型</string>

    <string name="tv_IO_Mode_Set_Output">输出类型</string>

    <string name="tv_keyboard_set_BtnName">按钮名称:</string>

    <string name="tv_keyboard_set_SendValue">发送内容:</string>

    <string name="tv_actDiscovery_Receive_Show_Init">请按【MENU】键，创建蓝牙设备连接。 提示：第一次连接前请先建立手机与蓝牙设备的配对</string>

    <string name="tv_actKeyBoard_Init">通过【MENU】键，可设置键盘的每个按键功能。</string>

    <string name="dialog_title_IO_Mode_Set">输入输出类型设置</string>

    <string name="dialog_title_keyboard_Set">按钮功能设置</string>

    <string name="dialog_title_Err">错误</string>

    <string name="dialog_title_Operat_Mode">选择操作模式</string>

    <string name="msg_actDiscovery_Connevction_Access">蓝牙串口连接成功</string>

    <string name="msg_actDiscovery_SendBytesErr">串口发送数据失败</string>

    <string name="msg_actDiscovery_select_device">选择需要连接的蓝牙设备</string>

    <string name="msg_actDiscovery_Bluetooth_Open_Fail">蓝牙未开启，请退出重试.</string>

    <string name="msg_actDiscovery_Bluetooth_Open_Modle">正在打开蓝牙模块....</string>

    <string name="msg_actDiscovery_Bluetooth_Open">正在尝试开启蓝牙设备.</string>

    <string name="msg_actDiscovery_Bluetooth_SPP_Conn_Fail">蓝牙设备串口通讯连接失败。</string>

    <string name="msg_actDiscovery_Search">蓝牙设备搜索中...</string>

    <string name="msg_actDiscovery_Bluetooth_Bond_msg">当前选择的设备未绑定，请绑定后再连接</string>

    <string name="msg_actDiscovery_Bluetooth_Bond_fail">蓝牙设备绑定失败</string>

    <string name="msg_Hex_String_Illegal">16进制值不合法</string>

    <string name="msg_Bluetooth_conn_lost">设备未连接</string>

    <string name="msg_please_connect">请先建立蓝牙连接</string>

    <string name="msg_connect_ok">设备连接成功</string>

    <string name="msg_re_connect">请退出程序后，再连接。</string>

    <string name="msg_connect_history">直接建立上次已成功连接的设备连接？ 请确认需要连接的设备已开起，并且在有效距离内。</string>

    <string name="msg_connecting">设备连接中...</string>

    <string name="msg_main_Operation_mode">请选择你需要的操作模式。【普通模式】为字符串输入输出模式。【键盘模式】为9宫格按钮布局，每次按下按钮后会发送一串预制数据到接收端。</string>

    <string name="msg_keyboard_Setings">当前为键盘设置模式。按【menu】键，选择【键盘设置结束】，来完成设置</string>

    <string name="var_about_language">cn</string>

    <string name="display_mode">显示方式</string>

    <string name="syn_b40">B40</string>

    <string name="syn_b39">B39</string>

    <string name="syn_b38">B38</string>

    <string name="syn_b41">B41</string>

    <string name="syn_b1_lian">B1-联通</string>

    <string name="syn_b1_dian">B1-电信</string>

    <string name="syn_b3_lian">B3-联通</string>

    <string name="syn_b3_dian">B3-电信</string>

    <string name="syn_b5">B5</string>

    <string name="syn_b8">B8</string>

    <string name="syn_sate">工作模式</string>
    <string name="syn_sate_near">近距离模式</string>
    <string name="syn_sate_yuan">远距离模式</string>

    <string name="display_state1">功率</string>

    <string name="display_state2">数值</string>

    <string name="display_state3">方向</string>

    <string name="display_state4">距离</string>

    <string name="mode_switch">制式：</string>
    <string name="msg_channel">频点：</string>
    <string name="pci">PCI：</string>

    <string name="app_more_function">系统信息</string>
    <string name="app_version_code">FPGA版本</string>

    <string name="lang_change">MCU版本</string>

    <string name="app_version">APP版本</string>

    <string name="mode_chose">制式切换</string>
    <string name="tdd">TDD</string>
    <string name="fdd">FDD</string>
    <string name="wcd">WCDMA_MODE</string>
    <string name="cdma">CDMA_MODE</string>
    <string name="tds">TDSCDMA_MODE</string>
    <string name="gsm">GSM_MODE</string>

    <string name="old_v">老版本</string>
    <string name="new_v">新版本</string>

    <string name="Settings">去设置</string>
    <string name="Apply">权限申请</string>
    <string name="PhoneDialogHead">在设置-应用-</string>
    <string name="PhoneDialogTail">-权限中开启电话权限，以正常使用App功能</string>

    <string name="LocationDialogHead">在设置-应用-</string>
    <string name="LocationDialogTail">-权限中开启位置权限，以正常使用App功能</string>

    <string name="title_setChannel">请输入信道号</string>
    <string name="title_setPCI">请输入PCI</string>
    <string name="title_setSyn">请输入同步频点</string>

    <string name="error_message_one">制式必须先选好</string>
    <string name="error_message">信号通道和制式必须先选好</string>
    <string name="error_message_all">请把信息填写完整</string>
    <string name="tip_channelValue">请输入0-65535的数字</string>
    <string name="tip_pciValue">请输入0-503的数字</string>
    <string name="tip_pnValue">请输入0-999的数字</string>
    <string name="tip_synValue">请输入0-65535的数字</string>

    <string name="SettingSuccess">设置成功</string>
    <string name="SettingFail">设置失败</string>
</resources>
