<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <TextView
        android:id="@+id/clear_cache_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/mode_chose"
        android:textSize="15sp" />

        <View style="@style/myStraightLine"
            android:id="@+id/clear_cache_line"
            android:layout_below="@+id/clear_cache_title"/>

    <TextView
        android:id="@+id/select_tdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clear_cache_line"
        android:padding="15dp"
        android:text="@string/tdd"
        android:textSize="13sp"/>

        
        <View style="@style/myStraightLine"
            android:id="@+id/clear_cache_line_1"
            android:layout_below="@+id/select_tdd"/>
    <TextView
        android:id="@+id/select_fdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clear_cache_line_1"
        android:padding="15dp"
        android:text="@string/fdd"
        android:textSize="13sp"/>


    <View style="@style/myStraightLine"
        android:id="@+id/clear_cache_line_2"
        android:layout_below="@+id/select_fdd"/>

    <TextView
        android:id="@+id/select_gsm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clear_cache_line_2"
        android:padding="15dp"
        android:text="@string/gsm"
        android:textSize="13sp"/>
  
    <View style="@style/myStraightLine"
        android:id="@+id/clear_cache_line_3"
        android:layout_below="@+id/select_gsm"/>

    <TextView
        android:id="@+id/select_tds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clear_cache_line_3"
        android:padding="15dp"
        android:text="@string/tds"
        android:textSize="13sp"/>

    <View style="@style/myStraightLine"
        android:id="@+id/clear_cache_line_4"
        android:layout_below="@+id/select_tds"/>

    <TextView
        android:id="@+id/select_cdma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clear_cache_line_4"
        android:padding="15dp"
        android:text="@string/cdma"
        android:textSize="13sp"/>

    <View style="@style/myStraightLine"
        android:id="@+id/clear_cache_line_5"
        android:layout_below="@+id/select_cdma"/>

    <TextView
        android:id="@+id/select_wcd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clear_cache_line_5"
        android:padding="15dp"
        android:text="@string/wcd"
        android:textSize="13sp"/>

    <View style="@style/myStraightLine"
        android:id="@+id/clear_cache_line_6"
        android:layout_below="@+id/select_wcd"/>

 <!--   <TextView
        android:id="@+id/select_vietnamese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clear_cache_line_2"
        android:padding="15dp"
        android:text="@string/vietnamese"
        android:textSize="13sp"/>

    <View style="@style/myStraightLine"
        android:id="@+id/clear_cache_line_3"
        android:layout_below="@+id/select_vietnamese"/>-->
    
    <Button
        android:id="@+id/select_cancel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/clear_cache_line_6"
        android:layout_centerInParent="true"
        android:text="@string/Cancel"
        android:background="@null"
        android:padding="20dp"
        android:textSize="15sp"/>

</RelativeLayout>