<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/main_radio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/titlebar"
        android:gravity="center_vertical"
        android:orientation="horizontal" >


        <RadioButton
            style="@style/main_tab_bottom"
            android:tag="radio_button1"
            android:drawableTop="@drawable/tab2_seletcor"
            android:text="@string/tab_main" />
        <RadioButton
            style="@style/main_tab_bottom"
            android:tag="radio_button2"
            android:drawableTop="@drawable/tab3_seletcor"
            android:text="@string/tab_config" />
        <RadioButton
            style="@style/main_tab_bottom"
            android:tag="radio_button3"
            android:drawableTop="@drawable/tab4_seletcor"
            android:text="@string/tab_system" />
    </RadioGroup>
</LinearLayout>
